--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Cool Background</title>
+        <title>Background Generator</title>
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body id="gradient">
@@ -11,6 +11,6 @@
         <input class="color2" type="color" name="color2" value="#ff0000">
         <h2>This is the background</h2>
         <h3></h3>
-        <script type="text/javascript" src="bundle.js"></script>
+        <script type="text/javascript" src="script.js"></script>
     </body>
 </html>
